@@ -1,3 +1,4 @@
+2010-03-09 Version 1.4.4 -N and -n options to compare the CN to an hostname
 2009-12-02 Version 1.4.2 the -i ISSUER option now checks if the O= or the CN= fields of the root certificate match
 2009-11-30 Version 1.4.1 -r to specify the root cert to be used for verification
 2009-11-30 Version 1.4.0 certificate chain verification
@@ -12,3 +13,9 @@
            - temporary files cleanup upon exit
 2007-08-15 Bug fix: openssl did not close the connection cleanly
 2007-08-10 First release (1.0)
+
+# File version information:
+# $Id: AUTHORS 1103 2009-12-07 07:49:19Z corti $
+# $Revision: 1103 $
+# $HeadURL: https://svn.id.ethz.ch/nagios_plugins/check_updates/AUTHORS $
+# $Date: 2009-12-07 08:49:19 +0100 (Mon, 07 Dec 2009) $
